# multiclass-data-explorations

./: .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml
data/processed/: .gitignore
notebooks/templates/: ida.ipynb
scripts/: load.py  preprocess.py  train_test_divide.py
src/: constants.py  custom_transformers.py  ida.py  params.py  randomness.py
