[tool.poetry]
name = "multiclass-data-explorations"
version = "0.1.0"
description = ""
authors = ["Hubert1225 <hubibaran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
scipy = "^1.11.2"
matplotlib = "^3.8.0"
seaborn = "^0.12.2"
dvc = "^3.22.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
